<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color">

            <androidx.cardview.widget.CardView
                android:id="@+id/headerParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="20dp"
                app:elevation="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <include
                    layout="@layout/sub_header_layout"
                    android:shadowColor="@color/primaryTextColor" />
            </androidx.cardview.widget.CardView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/ic_profile_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerParent">

            </de.hdodenhof.circleimageview.CircleImageView>

            <app.presentation.components.AdvTextView
                android:id="@+id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:text="@string/john_doe"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                app:customFont="@string/font_bold"
                app:layout_constraintBottom_toBottomOf="@id/profileIV"
                app:layout_constraintStart_toEndOf="@+id/profileIV"
                app:layout_constraintTop_toTopOf="@id/profileIV" />

            <View
                android:id="@+id/nameSeparator"
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="@color/line_color"
                app:layout_constraintBottom_toBottomOf="@id/profileIV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/profileIV" />


            <ImageView
                android:id="@+id/mailIv"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="18dp"
                android:src="@drawable/ic_et_mail"
                app:layout_constraintStart_toStartOf="@id/nameSeparator"
                app:layout_constraintTop_toTopOf="@id/nameSeparator"
                tools:ignore="ContentDescription" />

            <app.presentation.components.AdvTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/email_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="12sp"
                app:customFont="@string/font_medium"
                app:layout_constraintBottom_toBottomOf="@id/mailIv"
                app:layout_constraintStart_toEndOf="@id/mailIv"
                app:layout_constraintTop_toTopOf="@id/mailIv" />


            <ImageView
                android:id="@+id/phoneIv"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="18dp"
                android:src="@drawable/ic_phone"
                app:layout_constraintBottom_toBottomOf="@id/nameSeparator"
                app:layout_constraintStart_toEndOf="@id/nameSeparator"
                tools:ignore="ContentDescription" />

            <app.presentation.components.AdvTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/phone_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="12sp"
                app:customFont="@string/font_medium"
                app:layout_constraintBottom_toBottomOf="@id/phoneIv"
                app:layout_constraintStart_toEndOf="@id/phoneIv"
                app:layout_constraintTop_toTopOf="@id/phoneIv" />


            <app.presentation.components.AdvTextView
                android:id="@+id/skillTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_space"
                android:layout_marginTop="16dp"
                android:text="@string/skills"
                android:textColor="@color/primaryTextColor"
                android:textSize="14sp"
                app:customFont="@string/font_semi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileIV" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/skillCg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:paddingStart="@dimen/app_space"
                android:paddingEnd="@dimen/app_space"
                app:itemSpacing="@dimen/app_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/skillTv">

            </com.google.android.material.chip.ChipGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/skillsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_space"
                android:layout_marginTop="@dimen/app_space"
                android:layout_marginEnd="@dimen/app_space"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:visibility="gone"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/skillCg"
                tools:listitem="@layout/item_skills_layout"
                tools:targetApi="o"
                tools:visibility="visible" />


            <app.presentation.components.AdvTextView
                android:id="@+id/bioTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_space"
                android:layout_marginTop="16dp"
                android:text="@string/bio"
                android:textColor="@color/primaryTextColor"
                android:textSize="14sp"
                app:customFont="@string/font_semi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/skillsRv" />

            <app.presentation.components.AdvTextView
                android:id="@+id/bioDescTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_space"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/app_space"
                android:text="@string/bio_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="12sp"
                app:customFont="@string/font_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bioTv" />

            <app.presentation.components.AdvTextView
                android:id="@+id/galleryTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_space"
                android:layout_marginTop="16dp"
                android:text="@string/gallery"
                android:textColor="@color/primaryTextColor"
                android:textSize="14sp"
                app:customFont="@string/font_semi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bioDescTv" />

            <app.presentation.components.AdvRecyclerView
                android:id="@+id/galleryRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/galleryTv"
                app:rvDividerDrawable="@drawable/divider_space"
                app:rvDividerMode="middle"
                app:rvPreviewLayout="list"
                tools:itemCount="10"
                tools:listitem="@layout/item_gallery" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
